--- a/index.html
+++ b/index.html
@@ -3,36 +3,37 @@
   <head>
     <meta charset="utf-8">
     <title>List of Projects</title>
+    <link rel="stylesheet" type="text/css" href="styles/styles.css">
   </head>
   <body>
     <header>
       <h1>List of Projects</h1>
       <nav>
-        <a href="about-me.html">About Me</a>
+        <a class="important" href="about-me.html">About Me</a>
       </nav>
     </header>
 
     <section>
-      <h2>Project Name</h2>
+      <h2>Projects/Research:</h2>
       <article>
         <h3>1. Longrun Tea Company Analysis</h3>
         <ul>
           <li>Analyzed company’s current marketing strategies and defined short-term and long-term objectives by interview the distributor</li>
           <li>Discovered the problems in Alberta Park and identified the current Park status</li>
         </ul>
-        <img src="http://www.longruntea.com/HTML/static/webStyle/images/logo.jpg" width="300" height="100" alt="Google Drive">
-        <a href="https://drive.google.com/open?id=1Mhq9EUXHrN0RWLd7_m9JnS7AIaccF-sk">Link to the project.</a>
+        <img class="img" src="http://www.longruntea.com/HTML/static/webStyle/images/logo.jpg" width="300" height="100" alt="Google Drive">
+        <a class="link1" href="https://drive.google.com/open?id=1Mhq9EUXHrN0RWLd7_m9JnS7AIaccF-sk">~Link to the project~</a>
         <h3>2. Relationship Amoung Human, Animals, and Plants at Alberta Park</h3>
         <ul>
           <li>Analyzed Alberta Park environment by observation and community interviews</li>
           <li>Discovered the problems in Alberta Park and identified the current Park status</li>
         </ul>
-        <img src="alberta-park.jpg" width="500" height="400" alt="Alberta Park">
-        <a href="https://drive.google.com/open?id=1QLuxIk955U3r-KRNZb9Sk-tXKv-xdKBt">Link to the project.</a>
+        <img class="img2" src="alberta-park.jpg" width="500" height="400" alt="Alberta Park">
+        <a class="link2" href="https://drive.google.com/open?id=1QLuxIk955U3r-KRNZb9Sk-tXKv-xdKBt">~Link to the project~</a>
       </article>
     </section>
     <footer>
-      <p>This page built for the assginemnt purpose, in 2019.</p>
+      <p class="footer">This page built for the assginemnt purpose, in 2019.</p>
     </footer>
   </body>
 </html>
