--- a/about-me.html
+++ b/about-me.html
@@ -3,36 +3,37 @@
   <head>
     <meta charset="utf-8">
     <title>About Me</title>
+    <link rel="stylesheet" type="text/css" href="styles/styles.css">
   </head>
   <body>
     <header>
       <h1>ABOUT ME</h1>
       <nav>
-        <a href="index.html">Back to The Project's List</a>
+        <a class="list-of-project" href="index.html">Back to The Project's List</a>
       </nav>
     </header>
 
     <section>
       <h2>Tina (Ya-Li) Wu</h2>
       <article>
-        <h3><u>Education</u></h3>
+        <h3>Education</h3>
         <h4>Northeastern University, Seattle</h4>
-        <i>Master of Science in Project Management <sub>(Expected: June 2020)</sub></i>
-        <p>Relevant Coursework: Project Scope Management, Quality Management, Managing Technical Teams, Risk Management</p>
+        <i>Master of Science in Project Management <sub>(Expected: June 2020)</sub></i><br />
+        Relevant Coursework: Project Scope Management, Quality Management, Managing Technical Teams, Risk Management<br />
 
         <h4>University of Washington, Seattle</h4>
-        <i>Certificate in Front-end Development</i>
-        <p>Relevant Coursework: CSS, HTML5</p>
+        <i>Certificate in Front-end Development</i><br />
+        Relevant Coursework: CSS, HTML5<br />
 
         <h4>Concordia University, Portland</h4>
-        <i>Bachelor of Arts in Accounting</i>
-        <p>Relevant Coursework: Economics, Accounting, Statistics, Investment, Auditing, Income Tax and Tax Refund</p>
+        <i>Bachelor of Arts in Accounting</i><br />
+        Relevant Coursework: Economics, Accounting, Statistics, Investment, Auditing, Income Tax and Tax Refund<br />
       </article>
     </section>
 
     <footer>
-      <p>This page built for the assignment purpose, in 2019.</p>
-      <a href="index.html"><b>Back to the List of Projects</b></a>
+      <p class="footer">This page built for the assignment purpose, in 2019.</p>
+      <a class="list-of-project2" href="index.html"><b>Back to the List of Projects</b></a>
     </footer>
   </body>
 </html>
