--- a/about-me.html
+++ b/about-me.html
@@ -4,36 +4,41 @@
     <meta charset="utf-8">
     <title>About Me</title>
     <link rel="stylesheet" type="text/css" href="styles/styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Kanit|Lobster|Righteous|Roboto+Condensed&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/7bd70a2758.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <header>
       <h1>ABOUT ME</h1>
       <nav>
-        <a class="list-of-project" href="index.html">Back to The Project's List</a>
+        <a class="fas fa-file-archive" id="list-of-project" href="index.html">Back to The Project's List</a>
       </nav>
     </header>
 
     <section>
       <h2>Tina (Ya-Li) Wu</h2>
-      <article>
-        <h3>Education</h3>
+      <h3>Education</h3>
+      <div class="box">
         <h4>Northeastern University, Seattle</h4>
-        <i>Master of Science in Project Management <sub>(Expected: June 2020)</sub></i><br />
-        Relevant Coursework: Project Scope Management, Quality Management, Managing Technical Teams, Risk Management<br />
-
+        <p class="major">Master of Science in Project Management <sub>(Expected: June 2020)</sub></p>
+        <p>Relevant Coursework: Project Scope Management, Quality Management, Managing Technical Teams, Risk Management</p>
+      </div>
+      <div class="box">
         <h4>University of Washington, Seattle</h4>
-        <i>Certificate in Front-end Development</i><br />
-        Relevant Coursework: CSS, HTML5<br />
-
+        <p class="major">Certificate in Front-end Development</p>
+        <p>Relevant Coursework: CSS, HTML5</p>
+      </div>
+      <div class="box">
         <h4>Concordia University, Portland</h4>
-        <i>Bachelor of Arts in Accounting</i><br />
-        Relevant Coursework: Economics, Accounting, Statistics, Investment, Auditing, Income Tax and Tax Refund<br />
-      </article>
+        <p class="major">Bachelor of Arts in Accounting</p>
+        <p>Relevant Coursework: Economics, Accounting, Statistics, Investment, Auditing, Income Tax and Tax Refund</p>
+      </div>
     </section>
 
     <footer>
+      <a class="list-of-project2" href="index.html" id="footlink">Back to the List of Projects</a>
       <p class="footer">This page built for the assignment purpose, in 2019.</p>
-      <a class="list-of-project2" href="index.html"><b>Back to the List of Projects</b></a>
+
     </footer>
   </body>
 </html>
