--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="utf-8">
     <title>List of Projects</title>
     <link rel="stylesheet" type="text/css" href="styles/styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Kanit|Lobster|Righteous|Roboto+Condensed&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/7bd70a2758.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <header>
       <h1>List of Projects</h1>
-      <nav>
-        <a class="important" href="about-me.html">About Me</a>
-      </nav>
+      <a class="fas fa-address-book" id="important" href="about-me.html">About Me</a>
     </header>
 
     <section>
-      <h2>Projects/Research:</h2>
-      <article>
+      <h2>Projects/Researches</h2>
+      <div class="box2">
         <h3>1. Longrun Tea Company Analysis</h3>
         <ul>
           <li>Analyzed company’s current marketing strategies and defined short-term and long-term objectives by interview the distributor</li>
@@ -23,6 +23,8 @@
         </ul>
         <img class="img" src="http://www.longruntea.com/HTML/static/webStyle/images/logo.jpg" width="300" height="100" alt="Google Drive">
         <a class="link1" href="https://drive.google.com/open?id=1Mhq9EUXHrN0RWLd7_m9JnS7AIaccF-sk">~Link to the project~</a>
+      </div>
+      <div class="box2">
         <h3>2. Relationship Amoung Human, Animals, and Plants at Alberta Park</h3>
         <ul>
           <li>Analyzed Alberta Park environment by observation and community interviews</li>
@@ -30,8 +32,9 @@
         </ul>
         <img class="img2" src="alberta-park.jpg" width="500" height="400" alt="Alberta Park">
         <a class="link2" href="https://drive.google.com/open?id=1QLuxIk955U3r-KRNZb9Sk-tXKv-xdKBt">~Link to the project~</a>
-      </article>
+      </div>
     </section>
+
     <footer>
       <p class="footer">This page built for the assginemnt purpose, in 2019.</p>
     </footer>
