--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
           <li>Analyzed company’s current marketing strategies and defined short-term and long-term objectives by interview the distributor</li>
           <li>Discovered the problems in Alberta Park and identified the current Park status</li>
         </ul>
-        <img class="img" src="http://www.longruntea.com/HTML/static/webStyle/images/logo.jpg" width="300" height="100" alt="Google Drive">
-        <a class="link1" href="https://drive.google.com/open?id=1Mhq9EUXHrN0RWLd7_m9JnS7AIaccF-sk">~Link to the project~</a>
+        <img id="sbox" class="img" src="http://www.longruntea.com/HTML/static/webStyle/images/logo.jpg" width="300" height="100" alt="Google Drive">
+        <a id="sbox2" class="link1" href="https://drive.google.com/open?id=1Mhq9EUXHrN0RWLd7_m9JnS7AIaccF-sk">~Link to the project~</a>
       </div>
       <div class="box2">
         <h3>2. Relationship Amoung Human, Animals, and Plants at Alberta Park</h3>
