add html and css for contact-me.html

--- a/about-me.html
+++ b/about-me.html
@@ -11,7 +11,7 @@
     <header>
       <h1>ABOUT ME</h1>
       <nav>
-        <a class="fas fa-file-archive" id="list-of-project" href="index.html">Back to The Project's List</a>
+        <a class="fas fa-file-archive" id="list-of-project" href="index.html">The Project's List</a> / <a href="contact-me.html">Contact Me</a>
       </nav>
     </header>
 
