--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <h1>List of Projects</h1>
-      <a class="fas fa-address-book" id="important" href="about-me.html">About Me</a>
+      <a class="fas fa-address-book" id="important" href="about-me.html">About Me</a> / <a href="contact-me.html">Contact Me</a>
     </header>
 
     <section>
