--- a/contact-me.html
+++ b/contact-me.html
@@ -57,7 +57,7 @@
           <span class="checkmark"></span>
         </label>
 
-        <label>Korea
+        <label>Other
           <input type="checkbox" name="place" value="Korea">
           <span class="checkmark"></span>
         </label>
