--- a/contact-me.html
+++ b/contact-me.html
@@ -38,27 +38,27 @@
       <fieldset class="checkbox">
         <legend>Where are you from?</legend>
         <label>United States
-          <input type="checkbox" name="place" value="United States">
+          <input type="checkbox" name="place" value="united-states">
           <span class="checkmark"></span>
         </label>
 
         <label>China
-          <input type="checkbox" name="place" value="China">
+          <input type="checkbox" name="place" value="china">
           <span class="checkmark"></span>
         </label>
 
         <label>Aftica
-          <input type="checkbox" name="place" value="Africa">
+          <input type="checkbox" name="place" value="africa">
           <span class="checkmark"></span>
         </label>
 
         <label>Japan
-          <input type="checkbox" name="place" value="Japan">
+          <input type="checkbox" name="place" value="japan">
           <span class="checkmark"></span>
         </label>
 
         <label>Other
-          <input type="checkbox" name="place" value="Korea">
+          <input type="checkbox" name="place" value="other">
           <span class="checkmark"></span>
         </label>
 
